tests/compiler/ClassDeclaration11/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.8.2/tests/cases/compiler/ClassDeclaration11.ts`, Apache-2.0 License

class C {
   constructor(); //~ ERROR: Constructor implementation is missing.
   foo() { }
}